--- a/src/components/Trainer/SelectWithCheckboxes/SelectWithCheckboxes.css
+++ b/src/components/Trainer/SelectWithCheckboxes/SelectWithCheckboxes.css
@@ -1,13 +1,14 @@
 .custom-dropdown {
-    
+
     border-radius: 4px;
     border: 1px solid #D9D9D9;
     padding: 0 !important;
-   
+
 }
 
 .ant-select-selector {
-    min-height: 42px; /* Increase the minimum height */
+    /* Increase 
+    he minimum height */
     display: flex;
     align-items: center;
 }
@@ -16,11 +17,11 @@
 .ant-select-dropdown {
     padding: 0 !important;
 
-  }
+}
 
 
 .search-container .ant-input {
-   height: 47px;
+    height: 47px;
     border: none;
     box-shadow: 0px 4px 4px 0px #00000040;
 
@@ -33,7 +34,8 @@
 }
 
 .dropdown-container .ant-checkbox-wrapper {
-    color: #5750DF; /* Add this line to change the "Select All" text color */
+    color: #5750DF;
+    /* Add this line to change the "Select All" text color */
 }
 
 
@@ -52,7 +54,7 @@
 
 .option-item-text {
     margin-left: 8px;
-    
+
 }
 
 /* Customize checkbox style */
@@ -68,4 +70,11 @@
 .ant-checkbox-checked .ant-checkbox-inner {
     background-color: #5750DF;
     border-color: #5750DF;
+}
+
+.select-option {
+    max-width: 100%;
+    padding-right: 5px;
+    font-size: 10px;
+font-weight: 500;
 }
