--- a/src/components/Trainer/Schedule/DayView/DayView.css
+++ b/src/components/Trainer/Schedule/DayView/DayView.css
@@ -1,10 +1,23 @@
 .daily-schedule-container {
+    margin: 10px 10px 0px 10px;
     display: flex;
     flex-direction: column;
     overflow-y: scroll;
     overflow-x: hidden;
     height: calc(100vh - 300px);
     border: 1px solid #eaeaea;
+}
+
+.daily-schedule-container::-webkit-scrollbar {
+    display: none;
+}
+
+.daily-schedule-container {
+    scrollbar-width: none;
+}
+
+.daily-schedule-container {
+    -ms-overflow-style: none;
 }
 
 .daily-schedule-header-row {
