--- a/src/components/Trainer/TabTraining/TabTraining.css
+++ b/src/components/Trainer/TabTraining/TabTraining.css
@@ -2,6 +2,25 @@
     margin: 20px;
 }
 
+.container {
+    height: calc(100vh - 260px);
+    padding: 0 20px 20px 20px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+
+.container::-webkit-scrollbar {
+    display: none;
+}
+
+.container {
+    scrollbar-width: none;
+}
+
+.container {
+    -ms-overflow-style: none;
+}
+
 .row {
     display: flex;
     flex-wrap: wrap;
@@ -26,8 +45,4 @@
 
 .e-date {
     margin-left: 100px;
-}
-
-.select-training {
-    max-width: 150px;
 }
