--- a/src/components/Trainer/GpaChart/GpaChart.css
+++ b/src/components/Trainer/GpaChart/GpaChart.css
@@ -26,3 +26,10 @@
     font-style: italic;
     color: #a3a3a3;
 }
+
+.table-title {
+    text-align: center;
+    margin-top: 50px;
+    font-size: 34px;
+    color: #ccc;
+}
