--- a/src/components/Trainer/Schedule/WeekView/WeekView.css
+++ b/src/components/Trainer/Schedule/WeekView/WeekView.css
@@ -1,4 +1,4 @@
-.container-timetable {
+.container-weekview {
     margin: 10px 10px 0px 10px;
     overflow-y: scroll;
     overflow-x: hidden;
@@ -6,19 +6,19 @@
     border-bottom: 1px solid #eaeaea;
 }
 
-.container-timetable::-webkit-scrollbar {
+.container-weekview::-webkit-scrollbar {
     display: none;
 }
 
-.container-timetable {
+.container-weekview {
     scrollbar-width: none;
 }
 
-.container-timetable {
+.container-weekview {
     -ms-overflow-style: none;
 }
 
-.timetable {
+.weekview {
     display: grid;
     grid-template-columns: 80px repeat(6, 1fr);
     gap: 0;
