--- a/src/components/Trainer/TabReport/TabReport.css
+++ b/src/components/Trainer/TabReport/TabReport.css
@@ -1,97 +1,44 @@
-
-.tab-report-container {
-  padding: 20px;
-}
-.class-input{
-  width: 180px;
-}
-
-.module-input{
-  width: 150px;
-}
-.report-date{
-  width: 200px;
-  margin-right: 100px;
+.range-picker {
+  height: 32px;
+  width: 250px;
+  background-color: white;
+  border: 1px solid #ccc;
 }
 
-.tab-report-header {
+.search-container {
   display: flex;
-  justify-content: flex-start; 
-  margin-bottom: 20px;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 16px;
+  width: 100%;
 }
 
-.tab-report-info {
+.filter-controls {
   display: flex;
-  gap: 30px; 
-  
+  justify-content: center;
+  align-items: center;
 }
 
-.start-date {
-  margin-left: 500px;
+.filter-controls strong {
+  display: block;
 }
 
-.end-date{
-  margin-left: 130px;
-
+.filter-controls>*:not(:first-child) {
+  margin-left: 16px;
 }
 
-.bold-text{
-  font-weight: bold;
-
-}
-
-.search{
-  margin-left: 100px;
-  
-}
-.tab-report-filters {
-  display: flex;
-  gap: 20px;
-  margin-bottom: 20px;
-  font-weight: bold; 
-}
-
-.tab-report-filters > div {
+.search-input {
   display: flex;
   flex-direction: column;
-}
-
-.tab-report-total-duration {
-  text-align: right;
-  margin-top: 10px;
+  align-items: flex-start;
   font-weight: bold;
-}
-.tab-report-table {
-  width: 100%;
-  border-collapse: collapse;
-  margin-top: 20px;
+  margin-bottom: 10px;
 }
 
-.tab-report-table th,
-.tab-report-table td {
-  border: 1px solid #ddd;
-  padding: 8px;
-  text-align: center;
-}
-
-.tab-report-table th {
-  background-color: #f2f2f2;
-  font-weight: bold;
-}
-
-.tab-report-table td {
-  vertical-align: middle;
-}
-
-.table-header {
-  text-align: left;
-  font-weight: bold;
-  padding: 10px;
-}
-
-.tab-report-total-duration {
-  text-align: right;
-  margin-top: 20px;
-  font-weight: bold;
-  padding-right: 20px;
+.search-input .ant-input {
+  height: 32px;
+  border: 1px solid #ccc;
+  box-shadow: none;
+  line-height: 32px;
+  font-size: 12px;
 }
