--- a/src/pages/Admin/ScheduleTrackerPage/ScheduleTrackerPage.css
+++ b/src/pages/Admin/ScheduleTrackerPage/ScheduleTrackerPage.css
@@ -130,6 +130,32 @@
     font-size: 14px;
 }
 
+.search1 {
+    gap: 5px;
+
+}
+
+.select-option {
+    max-width: 100%;
+    padding-right: 5px;
+    font-size: 14px;
+    font-weight: 400;
+
+}
+
+.button {
+    background: none;
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.button:hover {
+    background-color: red;
+    color: unset;
+}
+
 
 
 .search-icon {
@@ -149,37 +175,18 @@
     height: 32px;
 }
 
+.icon-filter {
+    width: 32px;
+    height: 32px;
+    font-size: 25px;
+    color: #333;
 
-/* table */
-.custom-table {
-    width: 100%;
-    border-collapse: collapse;
-    font-size: 16px;
 }
-
-.custom-table th,
-.custom-table td {
-    padding: 10px;
-    border: 1px solid #ddd;
-    text-align: left;
-}
-
-.custom-table th {
-    background-color: #f4f4f4;
-
-    font-size: 14px;
-}
-
-.custom-table td {
-    font-size: 14px;
-}
-
-
 
 
 .search {
     height: 32px;
-    width: 165px;
+    width: 100%;
     border-top-right-radius: 0px;
     border-bottom-right-radius: 0px;
 }
