--- a/src/pages/Trainer/ClassListPage/Feedback.css
+++ b/src/pages/Trainer/ClassListPage/Feedback.css
@@ -1,11 +1,32 @@
 .feedback-container {
-    padding: 20px 20px 80px; /* combined padding */
+    padding: 20px 20px 80px;
+    /* combined padding */
     background-color: #f9f9f9;
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     max-width: 98%;
     margin: 0 auto;
     position: relative;
+}
+
+.feedback-container {
+
+    height: calc(100vh - 270px);
+
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+
+.feedback-container::-webkit-scrollbar {
+    display: none;
+}
+
+.feedback-container {
+    scrollbar-width: none;
+}
+
+.feedback-container {
+    -ms-overflow-style: none;
 }
 
 .Name-module {
@@ -77,7 +98,7 @@
     align-items: center;
     color: #000000;
     margin-bottom: 20px;
-    
+
 }
 
 .rating-score {
@@ -154,6 +175,7 @@
     border-radius: 20px;
     transition: background-color 0.3s ease, color 0.3s ease;
 }
+
 .filter-button.active,
 .filter-button:hover {
     background-color: #e1e1e1;
@@ -220,6 +242,7 @@
     justify-content: center;
     margin-top: 30px;
 }
+
 .back-button,
 .load-more-button {
     padding: 10px 20px;
@@ -232,8 +255,8 @@
     transition: background-color 0.3s ease;
 }
 
-.button{
-  display: flex;
+.button {
+    display: flex;
     justify-content: center;
 }
 
@@ -254,6 +277,7 @@
     color: #007bff;
     margin-top: 10px;
 }
+
 /* Separator Line */
 .separator-line {
     height: 1px;
@@ -267,6 +291,7 @@
     align-items: center;
     margin-bottom: 15px;
 }
+
 .progress-label {
     flex: 1;
     font-size: 14px;
@@ -281,6 +306,7 @@
     overflow: hidden;
     margin-left: 15px;
 }
+
 .progress-bar-inner {
     height: 100%;
     background-color: #007bff;
@@ -306,9 +332,11 @@
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
+
 .details-button:hover {
     background-color: #0056b3;
 }
+
 .load-more-button {
     padding: 10px 20px;
     background-color: #007bff;
@@ -319,6 +347,7 @@
     margin-left: 10px;
     transition: background-color 0.3s ease;
 }
+
 .load-more-button:hover {
     background-color: #0056b3;
 }
