--- a/src/pages/Trainer/SchedulePage/SchedulePage.css
+++ b/src/pages/Trainer/SchedulePage/SchedulePage.css
@@ -1,39 +1,70 @@
-.container-schedule {
-    height: calc(100vh- 500px);
+.calendar-container {
+    display: flex;
+    justify-content: space-between;
+    padding: 5px;
+    height: calc(100vh - 280px);
 }
 
-.calendar-left {
-    padding: 10px;
-    border: 1px solid #eaeaea;
-    border-radius: 5px;
+.left-calendar {
+    flex: 1;
+    max-width: 300px;
+    border-right: 1px solid #e8e8e8;
+    padding-right: 20px;
 }
 
-.event-item {
-    position: absolute;
-    left: 5%;
-    right: 0;
-    box-sizing: border-box;
-    padding: 0 10px;
-    border: 1px solid #eaeaea;
-    border-radius: 8px;
-    color: #fff;
-    cursor: pointer;
-    font-weight: 400;
-    z-index: 1;
+.right-calendar {
+    flex: 1;
+    overflow-y: hidden;
+    height: calc(100vh - 220px);
+}
+
+.fc-scroller {
+    overflow-y: auto;
+    max-height: 500px;
+}
+
+.fc-timegrid {
     overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    width: 90%;
 }
 
-.orange {
-    background-color: orange;
+.custom-modal {
+    border-radius: 8px;
 }
 
-.green {
-    background-color: green;
+.custom-modal .ant-modal-title {
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
 }
 
-.default {
-    background-color: #509ADF75;
+.fc-event-title {
+    height: 100%;
+    width: 100%;
+    background-color: #e8e8e8;
+    border-radius: 3px;
+    padding: 5px;
+    color: #fff;
+    text-align: center;
+}
+
+.fc-event {
+    background-color: #e8e8e8;
+    border: none;
+}
+
+.fc-scrollgrid-sync-inner a {
+    text-decoration: none;
+    color: black;
+}
+
+.event-fresher {
+    background-color: orange !important;
+}
+
+.event-intern {
+    background-color: green !important;
+}
+
+.event-free_time {
+    background-color: #509ADF75 !important;
 }
