--- a/src/components/Trainer/Schedule/EventModal/EventModal.css
+++ b/src/components/Trainer/Schedule/EventModal/EventModal.css
@@ -27,8 +27,8 @@
 
 .checkbox-container {
     display: grid;
-    grid-template-columns: repeat(3, 1fr); /* 3 columns */
-    grid-auto-rows: auto; /* Let the rows adjust based on content */
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: auto;
     gap: 10px;
     margin-top: 10px;
 }
@@ -43,5 +43,3 @@
 .modal-footer .ant-btn {
     margin-left: 10px;
 }
-
-
